# Kaizen-Launcher

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docker/: Dockerfile.linux  (+2 more)
src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  crypto.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: commands.rs  microsoft.rs  minecraft.rs  mod.rs  xbox.rs
src-tauri/src/cloud_storage/: commands.rs  credentials.rs  db.rs  dropbox.rs  google_drive.rs  manager.rs  mod.rs  nextcloud.rs  s3.rs
src-tauri/src/db/: accounts.rs  instances.rs  mod.rs  settings.rs
src-tauri/src/db/migrations/: 001_init.sql  002_add_server_mode.sql
src-tauri/src/devtools/: mod.rs
src-tauri/src/discord/: hooks.rs  rpc.rs
src-tauri/src/download/: client.rs  commands.rs
src-tauri/src/instance/: commands.rs  mod.rs
src-tauri/src/launcher/: commands.rs  java.rs  mod.rs  runner.rs
src-tauri/src/minecraft/: commands.rs  installer.rs  mod.rs  skins.rs  versions.rs
src-tauri/src/modloader/: commands.rs  fabric.rs  forge.rs  installer.rs  mod.rs  neoforge.rs  neoforge_processor.rs  paper.rs  quilt.rs
src-tauri/src/modpacks/: mod.rs
src-tauri/src/modrinth/: commands.rs  mod.rs
src-tauri/src/sharing/: commands.rs  mod.rs  server.rs
src-tauri/src/tunnel/: agent.rs  bore.rs  cloudflare.rs  commands.rs  manager.rs  mod.rs  ngrok.rs  playit.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/utils/: paths.rs
(+68 files in other folders)
