[package]
name = "kaizen-launcher"
version = "0.1.0"
description = "A modern Minecraft launcher"
authors = ["Kaizen"]
edition = "2021"

[lib]
name = "kaizen_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Security - Token encryption
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v3", "v4", "serde"] }
sha1 = "0.10"
sha2 = "0.10"
zip = "2"
directories = "6"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
sysinfo = "0.32"
flate2 = "1"
urlencoding = "2"
libc = "0.2.178"
regex = "1"
once_cell = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = "z"
strip = true
